@@ -1,3 +1,9 @@
+2005-06-05  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Check for a Glade file in the build tree first (patch from Bastien
+	Nocera).
+
 2005-06-02  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
